# aws-sdk-rust-codegen

./: Cargo.toml
src/: main.rs
test-data/: lambda.json
