[package]
name = "aws-sdk-rust-codegen"
version = "0.1.0"
authors = ["David Barsky <dbarsky@amazon.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
html2md = "0.2"